Issue #3359: highcontrast signature field frame added

--- a/var/httpd/htdocs/skins/Agent/highcontrast/css/Core.Form.css
+++ b/var/httpd/htdocs/skins/Agent/highcontrast/css/Core.Form.css
@@ -82,6 +82,10 @@ div.InputField_Selection div.Text,
     color: var(--colTextDark);
 }
 
+iframe.Signature {
+    border-color: var(--colTextDark);
+}
+
 /**
  * @subsection  TableLike
  * @description Provides a table-like, aligned label-value structure
